# caa-project

./: README.md
client/: Cargo.toml  README.md  test.txt
client/src/: crypto.rs  files.rs  log.rs  main.rs  models.rs
client/src/commands/: cd.rs  change_password.rs  download.rs  exit.rs  help.rs  login.rs  logout.rs  ls.rs  mkdir.rs  mod.rs  ping.rs  register.rs  rm.rs  session.rs  sessions.rs  set.rs  share.rs  unshare.rs  upload_file.rs
doc/: keyrings.drawio  schema.drawio
server/: .env  .env.example  .gitignore  Cargo.toml  passwords
server/db/: test.sqlar
server/migrations/2023-12-12-141734_create_users/: up.sql
server/migrations/2023-12-12-225202_create_sessions/: up.sql
server/migrations/2023-12-13-160031_create_files/: up.sql
server/migrations/2023-12-13-160253_create_keyrings/: down.sql  up.sql
server/migrations/2023-12-13-160648_create_keys/: down.sql  up.sql
server/src/: log.rs  main.rs
server/src/db/: mod.rs  schema.rs
server/src/routes/: auth.rs  files.rs  mod.rs
