[package]
name = "caa-project-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
colored = "2.0.4"
lazy_static = "1.4.0"
shell-words = "1.1.0"
opaque-ke = { version = "2.0.0", features = ["serde", "argon2"]}
serde = "1.0.193"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
rand = "0.8.5"
rpassword = "7.3.1"
base64 = "0.21.5"
confy = "0.5.1"
argon2 = "0.4.1"
chacha20poly1305 = "0.10.1"
chrono = "0.4.31"
rsa = { version = "0.9.6", features = ["sha2"] }
