[package]
name = "caa-project-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.1", features = ["macros"]}
colored = "2.0.4"
opaque-ke = { version = "2.0.0", features = ["serde"]}
rand = "0.8.5"
serde = "1.0.193"
tokio = { version = "1.0", features = ["full"] }
