[package]
name = "caa-project-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.4.1"
axum = { version = "0.7.1", features = ["macros"]}
base64 = "0.21.5"
colored = "2.0.4"
dotenv = "0.15.0"
opaque-ke = { version = "2.0.0", features = ["serde", "argon2"]}
rand = "0.8.5"
redis = "0.23.3"
serde = "1.0.193"
tokio = { version = "1.0", features = ["full"] }
