[package]
name = "caa-project-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.4.1"
axum = { version = "0.7.1", features = ["macros"]}
axum-server = { git = "https://github.com/programatik29/axum-server.git", features = ["tls-rustls"] }
hyper = { version = "1.0.1", features = ["full"] }
base64 = "0.21.5"
colored = "2.0.4"
dotenv = "0.15.0"
opaque-ke = { version = "2.0.0", features = ["serde", "argon2"]}
rand = "0.8.5"
redis = "0.23.3"
redis-derive = "0.1.7"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
rustls = "0.22.0"
rcgen = "0.11.3"
diesel = { version = "2.1.4", default-features = false, features = ["sqlite"] }
deadpool-diesel = { version = "0.5.0", features = ["sqlite"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
